// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Test Empty test 1`] = `
<div
  class="body"
  data-testid="header"
>
  <div />
  <div
    class="body"
    data-testid="portfolio"
  >
    <div
      class="portfolioSum"
      data-testid="portfolio-sum"
    >
      <div
        class="summa"
      >
        $1,299.99
      </div>
      <div
        class="difference"
        data-testid="portfolio-difference"
      >
        0 (0%)
      </div>
    </div>
    <img
      alt=""
      class="image"
      src="/resources/images/coin.png"
    />
  </div>
</div>
`;

exports[`Header Test Snapshot test 1`] = `
<div
  class="body"
  data-testid="header"
>
  <div
    class="popularCoins"
  >
    <div
      class="body"
      data-testid="header-coin-card"
    >
      <div
        class="coinInfo"
      >
        <img
          alt=""
          class="coinImage"
          src="https://assets.coincap.io/assets/icons/btc@2x.png"
        />
        <div
          class="coinName"
          data-testid="coin-name"
        >
          Bitcoin
        </div>
        <div
          class="coinSymbol"
          data-testid="coin-symbol"
        >
          BTC
        </div>
      </div>
      <div
        class="coinPrice"
        data-testid="coin-price"
      >
        $6,931.51
      </div>
    </div>
    <div
      class="body"
      data-testid="header-coin-card"
    >
      <div
        class="coinInfo"
      >
        <img
          alt=""
          class="coinImage"
          src="https://assets.coincap.io/assets/icons/eth@2x.png"
        />
        <div
          class="coinName"
          data-testid="coin-name"
        >
          Ethereum
        </div>
        <div
          class="coinSymbol"
          data-testid="coin-symbol"
        >
          ETH
        </div>
      </div>
      <div
        class="coinPrice"
        data-testid="coin-price"
      >
        $2,164.58
      </div>
    </div>
    <div
      class="body"
      data-testid="header-coin-card"
    >
      <div
        class="coinInfo"
      >
        <img
          alt=""
          class="coinImage"
          src="https://assets.coincap.io/assets/icons/tst@2x.png"
        />
        <div
          class="coinName"
          data-testid="coin-name"
        >
          test
        </div>
        <div
          class="coinSymbol"
          data-testid="coin-symbol"
        >
          TST
        </div>
      </div>
      <div
        class="coinPrice"
        data-testid="coin-price"
      >
        $631.51
      </div>
    </div>
  </div>
  <div
    class="body"
    data-testid="portfolio"
  >
    <div
      class="portfolioSum"
      data-testid="portfolio-sum"
    >
      <div
        class="summa"
      >
        $1,299.99
      </div>
      <div
        class="difference"
        data-testid="portfolio-difference"
      >
        $188.32
         (
        14.49
        %)
      </div>
    </div>
    <img
      alt=""
      class="image"
      src="/resources/images/coin.png"
    />
  </div>
</div>
`;
